Se realizó cambio en el btn-cta principal de 'contactanos' a 'Ver proyecto'.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           de Acapulco.
         </p>
 
-        <a href="#">contáctanos</a>
+        <a href="#">Ver proyecto</a>
       </div>
 
       <ul class="social">
