Se modifica el btn-cta, se le hizo un efecto de hover, ui/ux

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
           deslumbrante belleza entre la laguna y el mar de la Riviera Diamante
           de Acapulco.
         </p>
-
-        <a href="#">Ver proyecto</a>
+        <a href="#">
+          <span>Ver proyecto</span>
+        </a>
       </div>
 
       <ul class="social">
