Se pusieron los links de facebook, instagram, youtube y en contacto se puso el link de facebook, se pondra el que corresponsa la proxima semana.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
             <li><a href="#">Planta</a></li>
             <li><a href="#">Galería</a></li>
             <li><a href="#">Avances</a></li>
-            <li><a class="menu-link_contacto" href="#">Contáctanos</a></li>
+            <li>
+              <a
+                class="menu-link_contacto"
+                href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
+                >Contáctanos</a
+              >
+            </li>
           </ul>
         </nav>
         <div class="btn_menu"></div>
@@ -79,25 +85,29 @@
           deslumbrante belleza entre la laguna y el mar de la Riviera Diamante
           de Acapulco.
         </p>
-        <a href="#">
+        <a
+          href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
+        >
           <span>Ver proyecto</span>
         </a>
       </div>
 
       <ul class="social">
         <li>
-          <a href="#">
+          <a
+            href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
+          >
             <ion-icon class="ion_icon" name="logo-facebook"></ion-icon>
           </a>
         </li>
         <li>
-          <a href="#">
-            <ion-icon class="ion_icon" name="logo-twitter"></ion-icon>
+          <a href="https://www.instagram.com/pacificodiamantemx/">
+            <ion-icon class="ion_icon" name="logo-instagram"></ion-icon>
           </a>
         </li>
         <li>
-          <a href="#">
-            <ion-icon class="ion_icon" name="logo-instagram"></ion-icon>
+          <a href="https://www.youtube.com/channel/UCddmRmV-KMWkDsHuS8y7Emg">
+            <ion-icon class="ion_icon" name="logo-youtube"></ion-icon>
           </a>
         </li>
       </ul>
@@ -111,7 +121,13 @@
         <li><a href="#">Planta</a></li>
         <li><a href="#">Galería</a></li>
         <li><a href="#">Avances</a></li>
-        <li><a class="menu-link_contacto" href="#">Contáctanos</a></li>
+        <li>
+          <a
+            class="menu-link_contacto"
+            href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
+            >Contáctanos</a
+          >
+        </li>
       </ul>
     </div>
     <script src="./js/main.js"></script>
