Se crea a proyecto.html en donde iran las secciones de 1) amenidades, 2) plan maestro y 3) planta.

--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
           deslumbrante belleza entre la laguna y el mar de la Riviera Diamante
           de Acapulco.
         </p>
-        <a
-          href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
-        >
+        <a href="proyecto.html">
           <span>Ver proyecto</span>
         </a>
       </div>
