Diseño final de la primer sección de la landing page

--- a/index.html
+++ b/index.html
@@ -67,15 +67,17 @@
         </nav>
         <div class="btn_menu"></div>
       </header>
+
       <!-- silencio: muted -->
-      <!-- <video id="video" src="/img/pacifico.mp4" muted autoplay loop></video> -->
+      <!-- <video id="video" src="/img/IslaTortuga.mp4" muted autoplay loop></video> -->
       <img
+        class="img-display-none"
         src="./img/alberca.jpeg"
         alt="Residencial Pacífico Diamante, Vista panoramica de las areas verdes, alberca y palapa"
       />
 
       <div class="overlay"></div>
-
+      <div class="msg"><h2></h2></div>
       <div class="text">
         <h2>Isla Tortuga</h2>
         <h3>¡El momento de invertir es ahora!</h3>
@@ -85,10 +87,29 @@
           deslumbrante belleza entre la laguna y el mar de la Riviera Diamante
           de Acapulco.
         </p>
-        <a href="proyecto.html">
+        <a
+          href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
+        >
           <span>Ver proyecto</span>
         </a>
       </div>
+
+      <ul class="control_audio">
+        <li>
+          <ion-icon
+            id="muted"
+            class="icon_audio"
+            name="volume-mute-outline"
+          ></ion-icon>
+        </li>
+        <li>
+          <ion-icon
+            id="play"
+            class="icon_audio"
+            name="pause-outline"
+          ></ion-icon>
+        </li>
+      </ul>
 
       <ul class="social">
         <li>
