--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/main.css?Nov" />
     <link rel="stylesheet" href="./style/medias.css" />
 
     <!-- Ion Icons -->
@@ -51,8 +51,8 @@
         <nav class="nav_menu">
           <ul>
             <!-- <li><a href="#">Inicio</a></li> -->
+            <li><a href="#">Proyecto</a></li>
             <li><a href="#">Amenidades</a></li>
-            <li><a href="#">Plan Maestro</a></li>
             <li><a href="#">Planta</a></li>
             <li><a href="#">Galería</a></li>
             <li><a href="#">Avances</a></li>
@@ -69,12 +69,12 @@
       </header>
 
       <!-- silencio: muted -->
-      <!-- <video id="video" src="/img/IslaTortuga.mp4" muted autoplay loop></video> -->
-      <img
+      <video id="video" src="/img/IslaTortuga.mp4" muted autoplay loop></video>
+      <!-- <img
         class="img-display-none"
         src="./img/alberca.jpeg"
         alt="Residencial Pacífico Diamante, Vista panoramica de las areas verdes, alberca y palapa"
-      />
+      /> -->
 
       <div class="overlay"></div>
       <div class="msg"><h2></h2></div>
@@ -126,7 +126,7 @@
         </li>
         <li>
           <a href="https://www.youtube.com/channel/UCddmRmV-KMWkDsHuS8y7Emg">
-            <ion-icon class="ion_icon" name="logo-youtube"></ion-icon>
+            <ion-icon class="ion_icon youtube" name="logo-youtube"></ion-icon>
           </a>
         </li>
       </ul>
@@ -134,9 +134,9 @@
 
     <div class="menu">
       <ul>
-        <li><a href="#">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="#">Proyecto</a></li>
         <li><a href="#">Amenidades</a></li>
-        <li><a href="#">Plan Maestro</a></li>
         <li><a href="#">Planta</a></li>
         <li><a href="#">Galería</a></li>
         <li><a href="#">Avances</a></li>
