archivos css funcionando al 100

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./style/main.css?Nov" />
-    <link rel="stylesheet" href="./style/medias.css" />
+    <link rel="stylesheet" href="./style/medias.css?Nov" />
 
     <!-- Ion Icons -->
     <script
