Se creo la sección de proyecto, se deja en color rojo el logo de youtube en la rama master para distuinguirla mas facilmente, el commit se hizo desde la rama master.o

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/main.css?Nov" />
-    <link rel="stylesheet" href="./style/medias.css?Nov" />
+    <link rel="stylesheet" href="./style/normalize.css?Dic1" />
+    <link rel="stylesheet" href="./style/main.css?Dic1" />
+    <link rel="stylesheet" href="./style/medias.css?Dic1" />
 
     <!-- Ion Icons -->
     <script
