--- a/proyecto.html
+++ b/proyecto.html
@@ -17,8 +17,9 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/medias.css" />
+
+    <link rel="stylesheet" href="./style/normalize.css?Dic1" />
+    <link rel="stylesheet" href="./style/proyecto.css?Dic1" />
 
     <!-- Ion Icons -->
     <script
@@ -38,15 +39,86 @@
     />
   </head>
   <body>
-    <section class="container amenidades">
-      <h1>Etapa Isla Tortuga</h1>
-      <h2>Amenidades</h2>
+    <section class="container proyecto">
+      <h1>Isla Tortuga</h1>
+      <div class="proyecto_img">
+        <img
+          src="/img/proyecto/proyecto_maestro_01.jpeg"
+          alt="Proyecto Residencial Pacífico Diamante Isla Tortuga"
+        />
+      </div>
+      <div class="proyecto_descripcion">
+        <p>
+          Quisque dapibus blandit velit, eget lacinia metus. Curabitur aliquam
+          cursus rutrum. Aenean vel ligula odio. Suspendisse tincidunt justo
+          lorem, quis malesuada enim eleifend nec. Duis convallis nisl ut
+          eleifend condimentum. Aliquam nec elementum elit, a scelerisque mi.
+          Quisque ut venenatis purus. Vivamus ac leo a erat dapibus auctor et a
+          mauris. Sed auctor ornare lacinia. Donec dapibus neque sapien, et
+          tristique libero pellentesque eu.
+        </p>
+      </div>
     </section>
-    <section class="container plan_maestro">
-      <h2>Plan Maestro</h2>
+    <section class="container amenidades">
+      <h1>Amenidades</h1>
     </section>
     <section class="container planta">
-      <h2>Plantas</h2>
+      <h1>Planta Tipo</h1>
+      <div class="planta_container">
+        <div class="planta_img">
+          <img
+            src="/img/proyecto/p1-pb-PhotoRoom.png"
+            alt="Planta Tipo Departamento Residencial Pacífico Diamante Isla Tortuga"
+          />
+        </div>
+        <div class="planta_descripcion">
+          <h3>Distribución</h3>
+          <ul>
+            <li>
+              <span>
+                <ion-icon name="checkmark-outline"></ion-icon>
+              </span>
+              3 Recamaras
+            </li>
+            <li>
+              <span>
+                <ion-icon name="checkmark-outline"></ion-icon>
+              </span>
+              3 Recamaras
+            </li>
+            <li>
+              <span>
+                <ion-icon name="checkmark-outline"></ion-icon>
+              </span>
+              3 Recamaras
+            </li>
+            <li>
+              <span>
+                <ion-icon name="checkmark-outline"></ion-icon>
+              </span>
+              3 Recamaras
+            </li>
+            <li>
+              <span>
+                <ion-icon name="checkmark-outline"></ion-icon>
+              </span>
+              3 Recamaras
+            </li>
+            <li>
+              <span>
+                <ion-icon name="checkmark-outline"></ion-icon>
+              </span>
+              3 Recamaras
+            </li>
+            <li>
+              <span>
+                <ion-icon name="checkmark-outline"></ion-icon>
+              </span>
+              3 Recamaras
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
   </body>
 </html>
