se comienza con el linkeado de las secciones

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             alt="Logo Pacífico Diamante Residencial"
           />
         </div>
+
+        <!-- Menú -->
         <nav class="nav_menu">
           <ul>
             <!-- <li><a href="#">Inicio</a></li> -->
@@ -132,12 +134,13 @@
       </ul>
     </section>
 
+    <!-- Menú responsive - Hamburguesa -->
     <div class="menu">
       <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="#">Proyecto</a></li>
-        <li><a href="#">Amenidades</a></li>
-        <li><a href="#">Planta</a></li>
+        <li><a href="proyecto.html/#proyecto">Proyecto</a></li>
+        <li><a href="proyecto.html/#amenidades">Amenidades</a></li>
+        <li><a href="proyecto.html/#amenidades">Planta</a></li>
         <li><a href="#">Galería</a></li>
         <li><a href="#">Avances</a></li>
         <li>
