--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
         </li>
         <li>
           <a href="https://www.instagram.com/pacificodiamantemx/">
-            <ion-icon class="ion_icon" name="logo-instagram"></ion-icon>
+            <ion-icon
+              class="ion_icon instagram"
+              name="logo-instagram"
+            ></ion-icon>
           </a>
         </li>
         <li>
