Primer commit dentro de la rama landingPageo, se dejo la maquetación completa, los menús funcionan, en los siguientes commits se harán las optimizaciones

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <body>
     <section class="showcase">
       <header>
+        <!-- Logo -->
         <div class="logo">
           <img
             class="logo_img"
@@ -54,9 +55,9 @@
         <nav class="nav_menu">
           <ul>
             <!-- <li><a href="#">Inicio</a></li> -->
-            <li><a href="#">Proyecto</a></li>
-            <li><a href="#">Amenidades</a></li>
-            <li><a href="#">Planta</a></li>
+            <li><a href="proyecto.html">Proyecto</a></li>
+            <li><a href="proyecto.html#amenidades">Amenidades</a></li>
+            <li><a href="proyecto.html#planta">Planta</a></li>
             <li><a href="#">Galería</a></li>
             <li><a href="#">Avances</a></li>
             <li>
@@ -72,23 +73,26 @@
       </header>
 
       <!-- silencio: muted -->
-      <video id="video" src="/img/IslaTortuga.mp4" muted autoplay loop></video>
+      <!-- <video id="video" src="/img/IslaTortuga.mp4" muted autoplay loop></video> -->
       <!-- <img
         class="img-display-none"
         src="./img/alberca.jpeg"
         alt="Residencial Pacífico Diamante, Vista panoramica de las areas verdes, alberca y palapa"
       /> -->
 
+      <!-- Overlay apoyo para el menú responsive -->
       <div class="overlay"></div>
+
+      <!-- Mensaje página en construcción -->
       <div class="msg"><h2></h2></div>
+
+      <!-- Eslogan -->
       <div class="text">
         <h2>Isla Tortuga</h2>
         <h3>¡El momento de invertir es ahora!</h3>
         <p>
-          PACIFICO DIAMANTE es más que un lugar para vivir y vacacionar, es un
-          lugar en donde volverás a descubrir, sentir y soñar, rodeado de la
-          deslumbrante belleza entre la laguna y el mar de la Riviera Diamante
-          de Acapulco.
+          PACÍFICO DIAMANTE, déjate deslumbrar por la belleza del mar y la
+          laguna de la Riviera Diamante de Acapulco.
         </p>
         <a
           href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
@@ -141,10 +145,10 @@
     <!-- Menú responsive - Hamburguesa -->
     <div class="menu">
       <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="proyecto.html/#proyecto">Proyecto</a></li>
-        <li><a href="proyecto.html/#amenidades">Amenidades</a></li>
-        <li><a href="proyecto.html/#amenidades">Planta</a></li>
+        <!-- <li><a href="index.html">Inicio</a></li> -->
+        <li><a href="proyecto.html">Proyecto</a></li>
+        <li><a href="proyecto.html#amenidades">Amenidades</a></li>
+        <li><a href="proyecto.html#amenidades">Planta</a></li>
         <li><a href="#">Galería</a></li>
         <li><a href="#">Avances</a></li>
         <li>
