Subsecciones Proyecto, Amenidades y Planta maquetación terminada, así como los menús funcionando. Posterior a este commit se continua con el llenado de información de las 3 secciones ya maquetadas. se procede con

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           />
         </div>
 
-        <!-- Menú -->
+        <!-- Menú Barra -->
         <nav class="nav_menu">
           <ul>
             <!-- <li><a href="#">Inicio</a></li> -->
@@ -148,7 +148,7 @@
         <!-- <li><a href="index.html">Inicio</a></li> -->
         <li><a href="proyecto.html">Proyecto</a></li>
         <li><a href="proyecto.html#amenidades">Amenidades</a></li>
-        <li><a href="proyecto.html#amenidades">Planta</a></li>
+        <li><a href="proyecto.html#planta">Planta</a></li>
         <li><a href="#">Galería</a></li>
         <li><a href="#">Avances</a></li>
         <li>
