--- a/proyecto.html
+++ b/proyecto.html
@@ -52,7 +52,7 @@
         />
       </div>
 
-      <!-- Menú -->
+      <!-- Menú Barra -->
       <nav class="nav_menu">
         <ul>
           <li><a href="index.html">Inicio</a></li>
@@ -71,25 +71,6 @@
         </ul>
       </nav>
       <div class="btn_menu"></div>
-
-      <!-- Menú responsive - Hamburguesa -->
-      <div class="menu">
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="#proyecto">Proyecto</a></li>
-          <li><a href="#amenidades">Amenidades</a></li>
-          <li><a href="#planta">Planta</a></li>
-          <li><a href="#">Galería</a></li>
-          <li><a href="#">Avances</a></li>
-          <li>
-            <a
-              class="menu-link_contacto"
-              href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
-              >Contáctanos</a
-            >
-          </li>
-        </ul>
-      </div>
     </header>
 
     <!-- Sección Proyecto -->
@@ -100,6 +81,7 @@
           src="/img/proyecto/proyecto_maestro_01.jpeg"
           alt="Proyecto Residencial Pacífico Diamante Isla Tortuga"
         />
+        <span class="profocus"></span>
       </div>
       <div class="proyecto_descripcion">
         <p>
@@ -175,6 +157,28 @@
         </div>
       </div>
     </section>
+
+    <!-- Menú responsive - Hamburguesa -->
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="#proyecto">Proyecto</a></li>
+        <li><a href="#amenidades">Amenidades</a></li>
+        <li><a href="#planta">Planta</a></li>
+        <li><a href="#">Galería</a></li>
+        <li><a href="#">Avances</a></li>
+        <li>
+          <a
+            class="menu-link_contacto"
+            href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
+            >Contáctanos</a
+          >
+        </li>
+      </ul>
+    </div>
+
+    <!-- Overlay apoyo para el menú responsive -->
+    <div class="overlay"></div>
 
     <script src="/js/proyecto.js"></script>
   </body>
