Sección Proyecto, Amenidades y Planta completas con la información cargada y estilos, en el siguiente commit se hará la función y maquetación del slide de fotos, así como la construcción de la sección de galería y avance de obra.

--- a/proyecto.html
+++ b/proyecto.html
@@ -81,14 +81,17 @@
           src="/img/proyecto/proyecto_maestro_01.jpeg"
           alt="Proyecto Residencial Pacífico Diamante Isla Tortuga"
         />
-        <span class="profocus"></span>
+        <span id="apublicas" class="profocus"></span>
+        <span id="plantas" class="profocus profocus_1"></span>
       </div>
       <div class="proyecto_descripcion">
         <p>
-          PACIFICO DIAMANTE es más que un lugar para vivir y vacacionar, es un
-          lugar en donde volverás a descubrir, sentir y soñar, rodeado de la
-          deslumbrante belleza entre la laguna y el mar de la Riviera Diamante
-          de Acapulco.
+          PACÍFICO DIAMANTE está ubicado en una de las zonas con más alta
+          plusvalía y prestigio de Acapulco, en la Riviera Diamante, en esta
+          zona se encuentran plazas comerciales y tiendas de lujo, así como
+          centros de entretenimiento donde realizán conciertos artistas de talla
+          internacional, te encontrarás a 5 minutos de la playa y 10 minutos del
+          Aeropuerto Internacional de Acapulco.
         </p>
       </div>
     </section>
@@ -96,17 +99,145 @@
     <!-- Sección Amenidades -->
     <section id="amenidades" class="container amenidades">
       <h1>Amenidades</h1>
+      <div class="amenidades__container">
+        <div class="amenidades__container-funo">
+          <ul>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/piscina.png"
+                  alt="Alberca Panorámica Pacífico Diamante"
+                />
+              </span>
+              <p>Alberca Panorámica</p>
+            </li>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/martini.png"
+                  alt="Vacaciones Pacífico Diamante"
+                />
+              </span>
+              <p>Pool Bar</p>
+            </li>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/tinas.png"
+                  alt="Tinas de hidromasaje Pacífico Diamante"
+                />
+              </span>
+              <p>Dos Tinas de Hidromasaje</p>
+            </li>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/silla-de-playa.png"
+                  alt="Asoleaderos y palapa Pacífico Diamante"
+                />
+              </span>
+              <p>Asoleaderos y Palapa</p>
+            </li>
+          </ul>
+        </div>
+        <div class="amenidades__container-fdos">
+          <ul>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/gimnasio.png"
+                  alt="Gimnasio Pacífico Diamante"
+                />
+              </span>
+              <p>Área de gimnasio</p>
+            </li>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/paddle.png"
+                  alt="Cancha de paddle Pacífico Diamante"
+                />
+              </span>
+              <p>Cancha de Paddle</p>
+            </li>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/asador.png"
+                  alt="Zona de asadores Pacífico Diamante"
+                />
+              </span>
+              <p>Zona de Asadores</p>
+            </li>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/zoneKid.png"
+                  alt="Kids Zone en Pacífico Diamante"
+                />
+              </span>
+              <p>Kid´s Zone</p>
+            </li>
+          </ul>
+        </div>
+        <div class="amenidades__container-ftres">
+          <ul>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/parque.png"
+                  alt="Amplias áreas verdes Pacífico Diamanate"
+                />
+              </span>
+              <p>Plazoleta</p>
+            </li>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/levantar.png"
+                  alt="Elevadores Pacífico Diamante"
+                />
+              </span>
+              <p>Elevadores</p>
+            </li>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/guardia-de-seguridad.png"
+                  alt="Seguridad las 24 horas del día Pacífico Diamante"
+                />
+              </span>
+              <p>Acceso Controlado 24/7</p>
+            </li>
+            <li>
+              <span>
+                <img
+                  src="/img/proyecto/amenidades/playa.png"
+                  alt="Disfruta tus Vacaciones en el Club de Playa Privado en Pacífico Diamante"
+                />
+              </span>
+              <p>Club de Playa Privado</p>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <!-- Sección Planta -->
     <section id="planta" class="container planta">
       <h1>Planta Tipo</h1>
-      <div class="planta_container">
+      <div class="container__planta">
         <div class="planta_img">
           <img
             src="/img/proyecto/p1-pb-PhotoRoom.png"
             alt="Planta Tipo Departamento Residencial Pacífico Diamante Isla Tortuga"
           />
+          <span id="room" class="plafocus"></span>
+          <span id="room" class="plafocus plafocus_1"></span>
+          <span id="room" class="plafocus plafocus_2"></span>
+          <span id="room" class="plafocus plafocus_3"></span>
+          <span id="room" class="plafocus plafocus_4"></span>
+          <span id="room" class="plafocus plafocus_5"></span>
         </div>
         <div class="planta_descripcion">
           <h3>Distribución</h3>
@@ -115,43 +246,44 @@
               <span>
                 <ion-icon name="checkmark-outline"></ion-icon>
               </span>
-              3 Recamaras
+              3 Recámaras, principal con baño y vestidor
             </li>
             <li>
               <span>
                 <ion-icon name="checkmark-outline"></ion-icon>
               </span>
-              3 Recamaras
+              3 Baños completos
             </li>
             <li>
               <span>
                 <ion-icon name="checkmark-outline"></ion-icon>
               </span>
-              3 Recamaras
+              Estancia / Comedor con ventanal panorámico
             </li>
             <li>
               <span>
                 <ion-icon name="checkmark-outline"></ion-icon>
               </span>
-              3 Recamaras
+              Cocina abierta con barra desayunador de granito
             </li>
             <li>
               <span>
                 <ion-icon name="checkmark-outline"></ion-icon>
               </span>
-              3 Recamaras
+              Increíble terraza con zona humeda
             </li>
             <li>
               <span>
                 <ion-icon name="checkmark-outline"></ion-icon>
               </span>
-              3 Recamaras
+              Área de lavado
             </li>
             <li>
               <span>
                 <ion-icon name="checkmark-outline"></ion-icon>
               </span>
-              3 Recamaras
+              Roof garden privado con área húmeda, barra con tarja, asador, zona
+              de asoleadero y medio baño
             </li>
           </ul>
         </div>
@@ -180,6 +312,19 @@
     <!-- Overlay apoyo para el menú responsive -->
     <div class="overlay"></div>
 
+    <!-- focus - modal and overlay  -->
+    <div class="focus_overlay modal_close">
+      <span class="close">X</span>
+      <div class="focus_modal">
+        <p>
+          ¡Hola! Algunas secciones de la página aún se encuentran en
+          construcción, agradecemos tu visita. Para más informes favor de
+          comunicarte a este número 744 131 6969 VENTAS - INFORMES
+        </p>
+      </div>
+    </div>
+
     <script src="/js/proyecto.js"></script>
+    <script src="/js/focus.js"></script>
   </body>
 </html>
