Commit fin de sección Proyecto, Amenidades y Planta, -> Inicio de sección de Galería

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <li><a href="proyecto.html">Proyecto</a></li>
             <li><a href="proyecto.html#amenidades">Amenidades</a></li>
             <li><a href="proyecto.html#planta">Planta</a></li>
-            <li><a href="#">Galería</a></li>
-            <li><a href="#">Avances</a></li>
+            <li><a href="proyecto.html#galeria">Galería</a></li>
+            <li><a href="proyecto.html#galeria">Avance de Obra</a></li>
             <li>
               <a
                 class="menu-link_contacto"
@@ -149,8 +149,8 @@
         <li><a href="proyecto.html">Proyecto</a></li>
         <li><a href="proyecto.html#amenidades">Amenidades</a></li>
         <li><a href="proyecto.html#planta">Planta</a></li>
-        <li><a href="#">Galería</a></li>
-        <li><a href="#">Avances</a></li>
+        <li><a href="proyecto.html#galeria">Galería</a></li>
+        <li><a href="proyecto.html#galeria">Avance de Obra</a></li>
         <li>
           <a
             class="menu-link_contacto"
