--- a/proyecto.html
+++ b/proyecto.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="./style/normalize.css?Dic1" />
     <link rel="stylesheet" href="./style/proyecto.css?Dic1" />
     <link rel="stylesheet" href="./style/medias.css?Dic1" />
+    <link rel="stylesheet" href="./style/focus_modal.css?Dic1" />
+    <link rel="stylesheet" href="./style/galeria.css?Dic1" />
 
     <!-- Ion Icons -->
     <script
@@ -59,8 +61,8 @@
           <li><a href="#proyecto">Proyecto</a></li>
           <li><a href="#amenidades">Amenidades</a></li>
           <li><a href="#planta">Planta</a></li>
-          <li><a href="#">Galería</a></li>
-          <li><a href="#">Avances</a></li>
+          <li><a href="#galeria">Galería</a></li>
+          <li><a href="#galeria">Avance de Obra</a></li>
           <li>
             <a
               class="menu-link_contacto"
@@ -145,11 +147,11 @@
             <li>
               <span>
                 <img
-                  src="/img/proyecto/amenidades/gimnasio.png"
+                  src="/img/proyecto/amenidades/jardin.png"
                   alt="Gimnasio Pacífico Diamante"
                 />
               </span>
-              <p>Área de gimnasio</p>
+              <p>Amplios Jardines</p>
             </li>
             <li>
               <span>
@@ -297,8 +299,8 @@
         <li><a href="#proyecto">Proyecto</a></li>
         <li><a href="#amenidades">Amenidades</a></li>
         <li><a href="#planta">Planta</a></li>
-        <li><a href="#">Galería</a></li>
-        <li><a href="#">Avances</a></li>
+        <li><a href="#galeria">Galería</a></li>
+        <li><a href="#galeria">Avance de Obra</a></li>
         <li>
           <a
             class="menu-link_contacto"
@@ -323,6 +325,11 @@
         </p>
       </div>
     </div>
+
+    <!-- Sección Amenidades -->
+    <section id="galeria" class="container galeria">
+      <h1>galería</h1>
+    </section>
 
     <script src="/js/proyecto.js"></script>
     <script src="/js/focus.js"></script>
