Queda completa la sección de Galería con su lightbox para mostrar completa la galería de imagenes. Se continúa con el despliegue de la pádina en Hostinger y se continuará en el siguiente commit con las funciones para las plantas así como los focus, sección de contactos al pie de página.

--- a/proyecto.html
+++ b/proyecto.html
@@ -326,12 +326,168 @@
       </div>
     </div>
 
-    <!-- Sección Amenidades -->
+    <!-- Sección Galería -->
     <section id="galeria" class="container galeria">
       <h1>galería</h1>
+      <div id="galery">
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/1_Interior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/11_Interior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/4_Interior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/3_Interior.jpg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/5_Interior.jpg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/6_Interior.jpg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/7_Interior.jpg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/8_Interior.JPG"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/9_Interior.jpg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/10_Interior.JPG"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/12_Interior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/110_Exterior.jpg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/120_Exterior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/130_Exterior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/140_Exterior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/150_Exterior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/160_Exterior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/170_Exterior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/180_Exterior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/club_playa01.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/club_playa03.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/club_playa04.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/club_playa05.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/club_playa07.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/club_playa08.jpg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/club_playa09.jpg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+      </div>
     </section>
+
+    <div id="contenedor-principal">
+      <div id="contenedor-interno">
+        <img
+          id="img-activa"
+          src="/img/proyecto/galeria/1_Interior.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+
+        <button id="btn-retrocede" type="button">
+          <span>
+            <ion-icon name="chevron-back-outline"></ion-icon>
+          </span>
+        </button>
+        <button id="btn-adelanta" type="button">
+          <span>
+            <ion-icon name="chevron-forward-outline"></ion-icon>
+          </span>
+        </button>
+      </div>
+      <button id="btn-cierra" type="button">X</button>
+    </div>
 
     <script src="/js/proyecto.js"></script>
     <script src="/js/focus.js"></script>
+    <script src="/js/galeria.js"></script>
   </body>
 </html>
